--- a/.pipelines/rec_dtdl_prod.yml
+++ b/.pipelines/rec_dtdl_prod.yml
@@ -5,7 +5,7 @@ on:
   push:
     branches: [ "main" ]
     paths:
-      - "Ontology"
+      - "Generated"
 
 env: 
   NUGET_FEED_URL: https://api.nuget.org/v3/index.json
@@ -35,8 +35,8 @@ jobs:
       # Run nuget package
       - name: 'nuget pack'
         run: |
-          nuget pack Ontology/Ontology.nuspec
+          nuget pack Generated/Ontology.nuspec
 
       # Publish the Ontology package to Nuget
-      - name: 'dotnet publish to nuget'
-        run: dotnet nuget push --source "${{ env.NUGET_FEED_URL }}" Ontology/**/*.nupkg
+      - name: 'publish to nuget'
+        run: nuget push --source "${{ env.NUGET_FEED_URL }}" Generated/RealEstateCore_DTDLv2.nupkg --skip-duplicate
