--- a/.github/workflows/rec_dtdl_prod.yml
+++ b/.github/workflows/rec_dtdl_prod.yml
@@ -25,7 +25,7 @@ jobs:
       - name: 'Setup Nuget'
         uses: nuget/setup-nuget@v1
         with:
-          nuget-api-key: ${{ secrets.NuGetAPIKey }}
+          nuget-api-key: ${{ secrets.NUGET_API_KEY }}
           nuget-version: '5.x'
 
       - name: Setup .NET
