--- a/API/REST/RealEstateCore.Ontology.DTDLv2.yaml
+++ b/API/REST/RealEstateCore.Ontology.DTDLv2.yaml
@@ -137,7 +137,7 @@ components:
           default: dtmi:org:brickschema:schema:Brick:Point;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Point.json
+          default: https://dev.realestatecore.io/contexts/Point.jsonld
         isPointOf:
           type: array
           items:
@@ -171,7 +171,7 @@ components:
           default: dtmi:org:brickschema:schema:Brick:Alarm;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Alarm.json
+          default: https://dev.realestatecore.io/contexts/Alarm.jsonld
         isPointOf:
           type: array
           items:
@@ -207,7 +207,7 @@ components:
           default: dtmi:org:brickschema:schema:Brick:Command;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Command.json
+          default: https://dev.realestatecore.io/contexts/Command.jsonld
         isPointOf:
           type: array
           items:
@@ -243,7 +243,7 @@ components:
           default: dtmi:org:brickschema:schema:Brick:Parameter;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Parameter.json
+          default: https://dev.realestatecore.io/contexts/Parameter.jsonld
         isPointOf:
           type: array
           items:
@@ -279,7 +279,7 @@ components:
           default: dtmi:org:brickschema:schema:Brick:Sensor;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Sensor.json
+          default: https://dev.realestatecore.io/contexts/Sensor.jsonld
         isPointOf:
           type: array
           items:
@@ -313,7 +313,7 @@ components:
           default: dtmi:org:brickschema:schema:Brick:Setpoint;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Setpoint.json
+          default: https://dev.realestatecore.io/contexts/Setpoint.jsonld
         isPointOf:
           type: array
           items:
@@ -349,7 +349,7 @@ components:
           default: dtmi:org:brickschema:schema:Brick:Status;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Status.json
+          default: https://dev.realestatecore.io/contexts/Status.jsonld
         isPointOf:
           type: array
           items:
@@ -385,7 +385,7 @@ components:
           default: dtmi:org:w3id:rec:Agent;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Agent.json
+          default: https://dev.realestatecore.io/contexts/Agent.jsonld
         isMemberOf:
           type: array
           items:
@@ -414,7 +414,7 @@ components:
           default: dtmi:org:w3id:rec:Asset;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Asset.json
+          default: https://dev.realestatecore.io/contexts/Asset.jsonld
         commissionedBy:
           type: array
           items:
@@ -576,7 +576,7 @@ components:
           default: dtmi:org:w3id:rec:BuildingElement;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/BuildingElement.json
+          default: https://dev.realestatecore.io/contexts/BuildingElement.jsonld
         documentation:
           type: array
           items:
@@ -637,7 +637,7 @@ components:
           default: dtmi:org:w3id:rec:Collection;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Collection.json
+          default: https://dev.realestatecore.io/contexts/Collection.jsonld
         documentation:
           type: array
           items:
@@ -666,7 +666,7 @@ components:
           default: dtmi:org:w3id:rec:Event;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Event.json
+          default: https://dev.realestatecore.io/contexts/Event.jsonld
         customTags:
           type: string
         end:
@@ -692,7 +692,7 @@ components:
           default: dtmi:org:w3id:rec:Information;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Information.json
+          default: https://dev.realestatecore.io/contexts/Information.jsonld
         customTags:
           type: string
         externalIds:
@@ -709,7 +709,7 @@ components:
           default: dtmi:org:w3id:rec:Space;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Space.json
+          default: https://dev.realestatecore.io/contexts/Space.jsonld
         hasPart:
           type: array
           items:
@@ -761,7 +761,7 @@ components:
           default: dtmi:org:w3id:rec:Document;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Document.json
+          default: https://dev.realestatecore.io/contexts/Document.jsonld
         documentTopic:
           type: array
           items:
@@ -800,7 +800,7 @@ components:
           default: dtmi:org:w3id:rec:Level;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Level.json
+          default: https://dev.realestatecore.io/contexts/Level.jsonld
         address:
           type: array
           items:
@@ -986,7 +986,7 @@ components:
           default: dtmi:org:w3id:rec:Site;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Site.json
+          default: https://dev.realestatecore.io/contexts/Site.jsonld
         address:
           type: array
           items:
@@ -1169,7 +1169,7 @@ components:
           default: dtmi:org:w3id:rec:Room;1
         '@context':
           type: string
-          default: https://dev.realestatecore.io/contexts/Room.json
+          default: https://dev.realestatecore.io/contexts/Room.jsonld
         address:
           type: array
           items:
