Swagger: Add license + URL

--- a/API/REST/RealEstateCore.Ontology.DTDLv2.yaml
+++ b/API/REST/RealEstateCore.Ontology.DTDLv2.yaml
@@ -2,8 +2,11 @@ openapi: 3.0.3
 info:
   version: "4.0.0-preview"
   title: RealEstateCore.Ontology.DTDLv2
+  license:
+    name: BSD-3-Clause
   contact:
     name: RealEstateCore
+    url: https://github.com/RealEstateCore/rec
   description: RealEstateCore (REC) is an ontology model and API specification for building and interfacing against Smart Buildings, whether on individual building or portfolio level. The REC ontology is released in DTDL (Digital Twin Definition Language) and SHACL (RDF Shapes Contraint language) formats; the REC API is expressed as an OpenAPI Specification (a.k.a. Swagger). We also provide a southbound edge API for bandwidth-constrained devices to communicate telemetry, alerts, commands, etc (see GitHub repository).
 components:
   parameters:
