Updated title element

--- a/API/REST/RealEstateCore.Ontology.DTDLv2.yaml
+++ b/API/REST/RealEstateCore.Ontology.DTDLv2.yaml
@@ -1,7 +1,7 @@
 openapi: 3.0.3
 info:
   version: "4.0.0-preview"
-  title: RealEstateCore.Ontology.DTDLv2
+  title: RealEstateCore Ontology (DTDLv2)
   license:
     name: BSD-3-Clause
   contact:
