Rev bump workflow operating on main branch

--- a/.github/workflows/increment_version_number.yml
+++ b/.github/workflows/increment_version_number.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
   push:
     branches: 
-    - feature-CI-BumpVersion
+    - main
     paths:
     - 'RealEstateCore.DTDLv2.jsonld'
     - 'RealEstateCore.DTDLv3.jsonld'
