Update push to nuget workflow

--- a/Metadata/RealEstateCore.Ontology.DTDLv2.nuspec
+++ b/Metadata/RealEstateCore.Ontology.DTDLv2.nuspec
@@ -12,11 +12,11 @@
     <copyright>Copyright ©2022 RealEstateCore</copyright>
     <tags>ontology rec brick</tags>
     <contentFiles>
-      <files include="**/*.json" buildAction="EmbeddedResource" copyToOutput="true" />
+      <files include="**/*.jsonld" buildAction="EmbeddedResource" copyToOutput="true" />
     </contentFiles>
   </metadata>
   <files>
-    <file src="**/RealEstateCore_DTDLv2.json" target="contentFiles\any\any" />
-    <file src="**/RealEstateCore_DTDLv2.json" target="content" />
+    <file src="**/RealEstateCore.DTDLv2.jsonld" target="contentFiles\any\any" />
+    <file src="**/RealEstateCore.DTDLv2.jsonld" target="content" />
   </files>
 </package>
