--- a/.github/workflows/generate_docs.yml
+++ b/.github/workflows/generate_docs.yml
@@ -32,5 +32,5 @@ jobs:
           git config user.name "Karl Hammar"
           git config user.email "hammar@users.noreply.github.com"
           git add .
-          git commit -m "Automatically regenerated ontology documentation."
+          git commit --allow-empty -m "Automatically regenerated ontology documentation."
           git push
