--- a/.github/workflows/manually_set_version.yml
+++ b/.github/workflows/manually_set_version.yml
@@ -1,13 +1,12 @@
-name: Increment .nuspec revision number
+name: Manually set .nuspec version
 
 on:
   workflow_dispatch:
-  push:
-    branches: 
-    - main
-    paths:
-    - 'RealEstateCore.DTDLv2.jsonld'
-    - 'RealEstateCore.DTDLv3.jsonld'
+    inputs:
+      version:
+        description: "New version"
+        required: true 
+        type: string
 
 jobs:
   increment-revision:
@@ -15,15 +14,15 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-      - name: Increment revision number
+      - name: Set version
         uses: vers-one/dotnet-project-version-updater@v1.2
         with:
           files: "Metadata/*.nuspec"
-          version: bump-revision
+          version: ${{ github.event.inputs.version }}
       - name: 'Commit updated revision number'
         run: |
           git config user.name "Karl Hammar"
           git config user.email "hammar@users.noreply.github.com"
           git add .
-          git commit -m "Autoincremented .nuspec version to ${{ steps.update.outputs.newVersion }}"
+          git commit -m "Set .nuspec version to ${{ steps.update.outputs.newVersion }}"
           git push
