--- a/.github/workflows/merge_dtdl_sources.yml
+++ b/.github/workflows/merge_dtdl_sources.yml
@@ -16,6 +16,7 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      token: ${{ secrets.CI_PUSH_PAT }}
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
