--- a/.github/workflows/increment_version_number.yml
+++ b/.github/workflows/increment_version_number.yml
@@ -18,6 +18,7 @@ jobs:
         with:
           token: ${{ secrets.CI_PUSH_PAT }}
       - name: Increment revision number
+        id: increment
         uses: vers-one/dotnet-project-version-updater@v1.2
         with:
           files: "Metadata/*.nuspec"
@@ -27,5 +28,5 @@ jobs:
           git config user.name "Karl Hammar"
           git config user.email "hammar@users.noreply.github.com"
           git add .
-          git commit -m "Autoincremented .nuspec version to ${{ steps.update.outputs.newVersion }}"
+          git commit -m "Autoincremented .nuspec version to ${{ steps.increment.outputs.newVersion }}"
           git push
