--- a/.github/workflows/manually_set_version.yml
+++ b/.github/workflows/manually_set_version.yml
@@ -9,7 +9,7 @@ on:
         type: string
 
 jobs:
-  increment-revision:
+  manually-set-version:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
