--- a/.github/workflows/increment_version_number.yml
+++ b/.github/workflows/increment_version_number.yml
@@ -1,8 +1,8 @@
-name: Increment .nuspec revision number
+name: Autoincrement .nuspec revision number
 
 on:
   workflow_dispatch:
-  push:
+  pull_request:
     branches: 
     - main
     paths:
@@ -15,8 +15,6 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
-        with:
-          token: ${{ secrets.CI_PUSH_PAT }}
       - name: Increment revision number
         id: increment
         uses: vers-one/dotnet-project-version-updater@v1.2
@@ -24,9 +22,6 @@ jobs:
           files: "Metadata/*.nuspec"
           version: bump-revision
       - name: 'Commit updated revision number'
-        run: |
-          git config user.name "Karl Hammar"
-          git config user.email "hammar@users.noreply.github.com"
-          git add .
-          git commit -m "Autoincremented .nuspec version to ${{ steps.increment.outputs.newVersion }}"
-          git push
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: "Autoincremented .nuspec version to ${{ steps.increment.outputs.newVersion }}"
