--- a/.github/workflows/manually_set_version.yml
+++ b/.github/workflows/manually_set_version.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
     inputs:
       version:
-        description: "New version"
+        description: "New .nuspec version"
         required: true 
         type: string
 
@@ -16,16 +16,13 @@ jobs:
         uses: actions/checkout@v3
         with:
           token: ${{ secrets.CI_PUSH_PAT }}
-      - name: Set version
+      - name: Set .nuspec version
         id: set-version
         uses: vers-one/dotnet-project-version-updater@v1.2
         with:
           files: "Metadata/*.nuspec"
           version: ${{ github.event.inputs.version }}
-      - name: 'Commit updated revision number'
-        run: |
-          git config user.name "Karl Hammar"
-          git config user.email "hammar@users.noreply.github.com"
-          git add .
-          git commit -m "Set .nuspec version to ${{ steps.set-version.outputs.newVersion }}"
-          git push
+      - name: 'Commit new .nuspec version'
+        uses: stefanzweifel/git-auto-commit-action@v4
+        with:
+          commit_message: Set .nuspec version to ${{ steps.set-version.outputs.newVersion }}
