--- a/Tools/DTDL2SHACL/DTDL2SHACL.csproj
+++ b/Tools/DTDL2SHACL/DTDL2SHACL.csproj
@@ -9,8 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
+    <PackageReference Include="dotNetRDF" Version="2.7.5" />
     <PackageReference Include="Microsoft.Azure.DigitalTwins.Parser" Version="6.4.0-preview" />
-    <PackageReference Include="RealEstateCore.DotNetRdfExtensions" Version="0.1.1" />
   </ItemGroup>
 
 </Project>
