--- a/.github/workflows/merge_and_document.yml
+++ b/.github/workflows/merge_and_document.yml
@@ -1,8 +1,8 @@
-name: Merge and generate
+name: Merge and Generate
 
 on:
   workflow_dispatch:
-  pull_request:
+  push:
     branches: 
       - "main"
     paths:
@@ -14,6 +14,8 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v3
+      with:
+        token:  ${{ secrets.CI_PUSH_PAT }}
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
