Updating to latest nugets

--- a/Tools/DTDLValidator/DTDLValidator.csproj
+++ b/Tools/DTDLValidator/DTDLValidator.csproj
@@ -9,7 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="CommandLineParser" Version="2.9.1" />
-    <PackageReference Include="Microsoft.Azure.DigitalTwins.Parser" Version="6.4.0-preview" />
+    <PackageReference Include="DTDLParser" Version="1.0.12-preview-ge5017bcd00" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
