--- a/Tools/DTDLMerger/DtdlMerger.csproj
+++ b/Tools/DTDLMerger/DtdlMerger.csproj
@@ -8,7 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Azure.DigitalTwins.Parser" Version="6.4.0-preview" />
+    <PackageReference Include="DTDLParser" Version="1.0.12-preview-ge5017bcd00" />
+    <PackageReference Include="System.Linq.Async" Version="6.0.1" />
   </ItemGroup>
 
 </Project>
